something is broken on the blog singles. This is a restore point before my attempt to fix it.

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -53,6 +53,7 @@ $bootstrap-icons-font-src: url("../node_modules/bootstrap-icons/font/fonts/boots
 
 body {
     min-height: 100svh;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
 }
